[package]
name = "mevscan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
ethers = {  features = ["abigen", "ws", "rustls"] }
futures = "0.3.28"

